[gd_scene load_steps=6 format=3 uid="uid://dun1cpardk2xw"]

[ext_resource type="Script" uid="uid://b56o2gqw1kccx" path="res://game.gd" id="1_nr0af"]
[ext_resource type="PackedScene" uid="uid://dsw8raqgacxsc" path="res://Player/player.tscn" id="2_4mm5m"]

[sub_resource type="Curve2D" id="Curve2D_cp6e5"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1055, -697, 0, 0, 0, 0, 1057, -697, 0, 0, 0, 0, 1057, 671, 0, 0, 0, 0, -1055, 663, 0, 0, 0, 0, -1055, -689)
}
point_count = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4mm5m"]
bg_color = Color(0, 0.6, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nr0af"]
bg_color = Color(0.541176, 0.054902, 0.521569, 1)

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_nr0af")

[node name="Spawn_Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.3
autostart = true

[node name="PlayTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 180.0
one_shot = true
autostart = true
ignore_time_scale = true

[node name="Player" parent="." instance=ExtResource("2_4mm5m")]

[node name="Path2D" type="Path2D" parent="Player"]
curve = SubResource("Curve2D_cp6e5")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-1055, -697)

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.439216)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.0
offset_top = -107.0
offset_right = 358.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 124
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalScore" type="Label" parent="GameOver/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.5
offset_top = 60.0
offset_right = 114.5
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 124
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -180.0
offset_right = -32.0
offset_bottom = -62.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 80
text = "Restart"

[node name="Background" type="CanvasLayer" parent="."]
layer = -32

[node name="ColorRect" type="ColorRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UI" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="UI"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -230.0
offset_top = 25.0
offset_right = -31.0
offset_bottom = 115.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 65
text = "Kills: 0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ExpBar" type="ProgressBar" parent="UI"]
unique_name_in_owner = true
offset_left = 60.0
offset_right = 120.0
offset_bottom = 1080.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 65
theme_override_styles/fill = SubResource("StyleBoxFlat_4mm5m")
fill_mode = 3
show_percentage = false

[node name="TimeBar" type="ProgressBar" parent="UI"]
unique_name_in_owner = true
offset_right = 60.0
offset_bottom = 1080.0
theme_override_styles/fill = SubResource("StyleBoxFlat_nr0af")
value = 100.0
fill_mode = 3
show_percentage = false

[node name="Ammo" type="Label" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -71.5
offset_right = 71.5
offset_bottom = 63.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
text = "Ammo"
horizontal_alignment = 1

[node name="Gun_Type" type="Label" parent="UI"]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -94.0
offset_right = 83.0
offset_bottom = -31.0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
text = "Gun_Type"

[node name="Level" type="Label" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -94.0
offset_bottom = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
text = "Level"

[node name="Unlock_Gun" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="Gun_Unlocked" type="Label" parent="Unlock_Gun"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.0
offset_top = -340.0
offset_right = 358.0
offset_bottom = -126.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 124
text = "Test Words"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Reload" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="Reload"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.439216)

[node name="Reload_Time" type="Label" parent="Reload/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.0
offset_top = -107.0
offset_right = 358.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 124
text = "Reload! [R]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="endgame" from="." to="Player" method="_on_game_endgame"]
[connection signal="level_up" from="." to="Player" method="_on_game_level_up"]
[connection signal="level_up" from="." to="Player" method="_on_level_up"]
[connection signal="timeout" from="Spawn_Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="PlayTimer" to="." method="_on_timer_2_timeout"]
[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="pressed" from="GameOver/ColorRect/Button" to="." method="_on_button_pressed"]
